[gd_scene load_steps=4 format=3 uid="uid://bwgsjk8akcba8"]

[ext_resource type="Script" path="res://scripts/bread/Bread.gd" id="1_vmsay"]
[ext_resource type="Texture2D" uid="uid://d17myda7pwl1t" path="res://graphics/breads/bread-1.png" id="2_axmr1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_taeiy"]
size = Vector2(100, 100)

[node name="bread" type="Node2D"]
script = ExtResource("1_vmsay")

[node name="BodyLeft" type="RigidBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="Collider" type="CollisionShape2D" parent="BodyLeft"]
shape = SubResource("RectangleShape2D_taeiy")

[node name="Image" type="Sprite2D" parent="BodyLeft"]
texture = ExtResource("2_axmr1")
region_enabled = true
region_rect = Rect2(16, 45, 194, 415)

[node name="BodyRight" type="RigidBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="Collider" type="CollisionShape2D" parent="BodyRight"]
shape = SubResource("RectangleShape2D_taeiy")

[node name="Image" type="Sprite2D" parent="BodyRight"]
region_enabled = true

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
